# autotune

./: .gitignore  AGENTS.md  Cargo.toml  Ion.toml  mise.toml  prek.toml
crates/autotune/: Cargo.toml
crates/autotune-adaptor/: Cargo.toml
crates/autotune-adaptor/src/: criterion.rs  lib.rs  regex.rs  script.rs
crates/autotune-adaptor/tests/: adaptor_test.rs
crates/autotune-agent/: Cargo.toml
crates/autotune-agent/src/: claude.rs  codex.rs  lib.rs  protocol.rs  terminal.rs  trace.rs
crates/autotune-agent/tests/: agent_test.rs  protocol_test.rs  terminal_test.rs
crates/autotune-benchmark/: Cargo.toml
crates/autotune-benchmark/src/: lib.rs
crates/autotune-benchmark/tests/: benchmark_test.rs
crates/autotune-config/: Cargo.toml
crates/autotune-config/src/: error.rs  global.rs  lib.rs
crates/autotune-config/tests/: config_test.rs  global_config_test.rs  global_config_write_test.rs
crates/autotune-git/: Cargo.toml
crates/autotune-git/src/: error.rs  lib.rs
crates/autotune-git/tests/: git_advanced_test.rs  git_test.rs
crates/autotune-implement/: Cargo.toml
crates/autotune-implement/src/: lib.rs
crates/autotune-implement/tests/: implement_test.rs
crates/autotune-init/: Cargo.toml
crates/autotune-init/src/: error.rs  input.rs  lib.rs  prompt.rs  select.rs  spinner.rs
crates/autotune-init/tests/: init_test.rs  prompt_test.rs
crates/autotune-judge/: Cargo.toml
crates/autotune-judge/src/: error.rs  judge.rs  lib.rs  model.rs  prompt.rs  review.rs  store.rs
crates/autotune-judge/tests/: judge_test.rs  review_test.rs
crates/autotune-mock/: Cargo.toml
crates/autotune-mock/src/: lib.rs
crates/autotune-mock/tests/: mock_init_test.rs  mock_test.rs
crates/autotune-plan/: Cargo.toml
crates/autotune-plan/src/: lib.rs
crates/autotune-plan/tests/: plan_test.rs
crates/autotune-score/: Cargo.toml
crates/autotune-score/src/: lib.rs  script.rs  threshold.rs  weighted_sum.rs
crates/autotune-score/tests/: score_test.rs
crates/autotune-state/: Cargo.toml
crates/autotune-state/src/: lib.rs
crates/autotune-state/tests/: state_test.rs
crates/autotune-test/: Cargo.toml
crates/autotune-test/src/: lib.rs
crates/autotune-test/tests/: test_runner_test.rs
crates/autotune/src/: agent_factory.rs  cli.rs  lib.rs  machine.rs  main.rs  resume.rs  stream_ui.rs
crates/autotune/tests/: init_test.rs  integration_test.rs  scenario_criterion_test.rs  scenario_init_test.rs  scenario_run_test.rs
docs/superpowers/plans/: 2026-04-11-agent-assisted-init.md  2026-04-11-autotune-cli-implementation.md  2026-04-15-backend-specific-agent-config.md  2026-04-15-codex-agent-backend.md  2026-04-15-coverage-autotune-config.md  2026-04-16-iteration-metrics-status.md  2026-04-20-init-judge-rubric.md  2026-04-20-judge-adaptor-integration.md
docs/superpowers/specs/: 2026-04-11-agent-assisted-init-design.md  2026-04-11-autotune-cli-design.md  2026-04-15-backend-specific-agent-config-design.md  2026-04-15-codex-agent-backend-design.md  2026-04-15-coverage-autotune-config-design.md  2026-04-16-autotune-judge-design.md  2026-04-16-iteration-metrics-status-design.md  2026-04-20-init-judge-rubric-design.md  2026-04-20-judge-adaptor-design.md
notes/: README.md  agent-protocol.md  agent-subprocess.md  config-and-tasks.md  git-integration.md  scoring-and-rank.md
