[package]
name = "autotune-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
autotune-config = { path = "../autotune-config" }
autotune-adaptor = { path = "../autotune-adaptor" }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
