[package]
name = "autotune"
version = "0.1.0"
edition = "2024"

[lib]
name = "autotune"
path = "src/lib.rs"

[[bin]]
name = "autotune"
path = "src/main.rs"

[dependencies]
autotune-agent = { path = "../autotune-agent" }
autotune-benchmark = { path = "../autotune-benchmark" }
autotune-config = { path = "../autotune-config" }
autotune-git = { path = "../autotune-git" }
autotune-implement = { path = "../autotune-implement" }
autotune-plan = { path = "../autotune-plan" }
autotune-score = { path = "../autotune-score" }
autotune-state = { path = "../autotune-state" }
autotune-test = { path = "../autotune-test" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
