[package]
name = "autotune"
version = "0.1.0"
edition = "2024"

[lib]
name = "autotune"
path = "src/lib.rs"

[[bin]]
name = "autotune"
path = "src/main.rs"

[dependencies]
autotune-agent = { path = "../autotune-agent" }
autotune-benchmark = { path = "../autotune-benchmark" }
autotune-config = { path = "../autotune-config" }
autotune-git = { path = "../autotune-git" }
autotune-implement = { path = "../autotune-implement" }
autotune-init = { path = "../autotune-init" }
autotune-plan = { path = "../autotune-plan" }
autotune-score = { path = "../autotune-score" }
autotune-state = { path = "../autotune-state" }
autotune-test = { path = "../autotune-test" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dialoguer = "0.11"
serde_json = "1"
termimad = "0.34"
toml = "0.8"
toml_edit = "0.22"
autotune-mock = { path = "../autotune-mock", optional = true }

[features]
mock = ["dep:autotune-mock"]

[dev-dependencies]
autotune-mock = { path = "../autotune-mock" }
autotune-init = { path = "../autotune-init" }
autotune-config = { path = "../autotune-config" }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
toml = "0.8"
scenario = "0.1.2"
